--- a/404.html
+++ b/404.html
@@ -6,17 +6,20 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<!--Ading some comment-->
-	<div class="container">
-		<div class="bottle">
-			<div class="brand"></div>
+	<div class="outer">
+		<div class="middle">
+			<div class="inner">
+				<div class="bottle">
+					<div class="brand"></div>
+				</div>
+				<div class="drop"></div>
+				<div class="dblfour"></div>
+				<h1>ئاپلا !</h1>
+				<p>سىز زىيارەت قىلماقچى بولغان بەت تېپىلمىدى، بەت ئادرېسىنى تەكشۈرۈپ بېقىڭ</p>
+				<p>ياكى ئاستىدىكى كونۇپكىدىن باشبەتكە قايتىڭ</p>
+				<p><a href="#" class="button">باش بەتكە قايتىش</a></p>
+			</div>
 		</div>
-		<div class="drop"></div>
-		<div class="dblfour"></div>
-		<h1>ئاپلا !</h1>
-		<p>سىز زىيارەت قىلماقچى بولغان بەت تېپىلمىدى، بەت ئادرېسىنى تەكشۈرۈپ بېقىڭ</p>
-		<p>ياكى ئاستىدىكى كونۇپكىدىن باشبەتكە قايتىڭ</p>
-		<p><a href="#" class="button">باش بەتكە قايتىش</a></p>
 	</div>
 </body>
 </html>
